--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,97 @@
-body {
-	margin:0;
-	font-family: sans-serif;
+body, html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box !important;
+  font-size: 16px;
+  font-family: Arial;  
+}
+
+.column {
+  float: left;
+  text-align: center;
+  width: 33.33%;
+  padding: 10px;  
+}
+
+.rowmain:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+img {
+	border: 1px solid;
+	width: 50px;
+    height: 50px;
+    float: left;
+}
+
+input[type=text], select, textarea {
+  color: grey;
+  padding: 12px;
+  border: 1px solid white;
+  border-radius: 4px;
+  resize: vertical;
+  box-shadow: 0 8px 3px 0 rgba(0,0,0,0.2), 0 6px 5px 0 rgba(0,0,0,0.19);
+}
+
+h2, label {
+  color: #008CBA;
+  padding: 12px 20px;
+  border: 2px solid white;
+  border-radius: 4px;
+
+  box-shadow: 0 8px 3px 0 rgba(0,0,0,0.2), 0 6px 5px 0 rgba(0,0,0,0.19);
+}
+
+input[type=submit] {
+  color: #008CBA !important;
+  padding: 12px 20px;
+  border: 2px solid white;
+  border-radius: 4px;
+  cursor: pointer;
+
+  box-shadow: 0 8px 3px 0 rgba(0,0,0,0.2), 0 6px 5px 0 rgba(0,0,0,0.19);
+}
+
+input[type=submit]:hover {
+  color: #5480da;
+}
+
+.container {
+  border-radius: 5px;
+  /* background-color: #f2f2f2;*/
+  padding: 20px;
+}
+
+.col-25 {
+  margin-top: 6px;
+}
+
+.col-75 {
+  /*width: 75%;*/
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
